--- a/doc/uml_basics.docbook
+++ b/doc/uml_basics.docbook
@@ -11,9 +11,9 @@ can take as a starting point.
 </para>
 
 <para>
-The Unified Modeling Language (&UML;) is a diagramming language or notation to specify, visualise and document
+The Unified Modeling Language (&UML;) is a diagramming language or notation to specify, visualize and document
 models of Object Orientated software systems. &UML; is not a development method, that means it does not tell you
-what to do first and what to do next or how to design your system, but it helps you to visualise
+what to do first and what to do next or how to design your system, but it helps you to visualize
 your design and communicate with others. &UML; is controlled by the Object Management Group (<acronym>OMG</acronym>) and is the
 industry standard for describing software models.
 </para>
