--- a/doc/authors.docbook
+++ b/doc/authors.docbook
@@ -2,19 +2,19 @@
 <title>Authors and History</title>
 <para>
 This project was started by Paul Hensgen as one of his University projects.
-The original name of the application was <application>UML Modeler</application>.  Paul did
+The original name of the application was <application>UML Modeller</application>.  Paul did
 all the development until the end of 2001 when the program reached version 1.0.
 </para>
 <para>
 Version 1.0 already offered a lot of functionality, but after the project had been reviewed at
 Paul's University, other developers could join and they started making valuable contributions
-to <application>UML Modeler</application>, like switching from a binary file format to an &XML; file, support for more
+to <application>UML Modeller</application>, like switching from a binary file format to an &XML; file, support for more
 types of &UML; Diagrams, Code Generation and Code Import just to name a few.
 </para>
 <para>
 Paul had to retire from the development team in Summer 2002 but, as Free and Open Source Software, the
 program continues to improve and evolve, and is being maintained by a group of developers from different
-parts of the world. Also, in September 2002, the project changed its name from <application>&UML; Modeler</application>, to
+parts of the world. Also, in September 2002, the project changed its name from <application>&UML; Modeller</application>, to
 &umbrello;. There are several reasons for the change of names, the most
 important ones being that just <quote>uml</quote> &mdash; as it was commonly known &mdash; was a much too generic name
 and caused problems with some distributions. The other important reason is that the developers think
