--- a/doc/index.docbook
+++ b/doc/index.docbook
@@ -1,7 +1,7 @@
 <?xml version="1.0" ?>
 <!DOCTYPE book PUBLIC "-//KDE//DTD DocBook XML V4.1.2-Based Variant V1.1//EN"
  "dtd/kdex.dtd" [
- <!ENTITY umbrello "<application>Umbrello &UML; Modeler</application>">
+ <!ENTITY umbrello "<application>Umbrello &UML; Modeller</application>">
  <!ENTITY kappname "&umbrello;">
  <!ENTITY packagename "kdesdk">
  <!ENTITY UML "<acronym>UML</acronym>">
@@ -23,7 +23,7 @@
 
 <book id="Umbrello" lang="&language;">
 <bookinfo>
-<title>&umbrello; &UML; Modeler Handbook</title>
+<title>&umbrello; &UML; Modeller Handbook</title>
 
 <authorgroup>
 <corpauthor>The &umbrello; developers</corpauthor>
