Update Handbook for Umbrello 1.2/KDE 3.2
svn path=/trunk/kdesdk/doc/umbrello/; revision=259115

--- a/doc/credits.docbook
+++ b/doc/credits.docbook
@@ -2,7 +2,8 @@
 <title>Copyright</title>
 
 <para>Copyright 2001, Paul Hensgen</para>
-<para>Copyright 2002, The Umbrello developers. See <ulink url="http://uml.sf.net">uml.sf.net</ulink> 
+<para>Copyright 2002, 2003 The &umbrello; Authors. See 
+<ulink url="http://uml.sf.net/developers.php">http://uml.sf.net/developers.php</ulink> 
 for more information</para>
 
 &underFDL;
