--- a/doc/code_import_and_generation.docbook
+++ b/doc/code_import_and_generation.docbook
@@ -5,7 +5,7 @@
 <emphasis>analysis and design</emphasis> of your systems. However, to make the transition
 between your design and your <emphasis>implementation</emphasis>, &umbrello; allows you to
 generate source code in different programming languages to get you started. Also, if you 
-want to start using &UML; in an already started project, &umbrello; can help you create a model
+want to start using &UML; in an already started C++ project, &umbrello; can help you create a model
 of your system from the source code by analysing your source code and importing the classes
 found in it.
 </para>
@@ -18,41 +18,8 @@ of the class declarations, with their methods and attributes so you can <quote>f
 blanks</quote> by providing the functionality of your classes' operations.
 </para>
 <para>
-&umbrello; comes with code generation support for C++, &Java; and <acronym>PHP</acronym>. Other languages can
-be easily added at a later time as plug-in modules to the application.
+&umbrello; 1.2 comes with code generation support for ActionScript, Ada, C++, CORBA IDL, &Java;, JavaScript, <acronym>PHP</acronym>, Perl, Python, SQL and XMLSchema. 
 </para>
-<sect2 id="add-languages">
-<title>Adding Languages</title>
-<para>
-&umbrello; ships with generators for C++, &Java;, and <acronym>PHP</acronym> which will be added to the list
-of supported languages the first time you start &umbrello;. You can later on download generators
-for other languages and add them as plug-ins to the application.
-</para>
-<para>
-The first time &umbrello; finds a new Code Generation plug in, it will ask you to confirm
-which of the languages offered by the new plug in you want to install (one plug in may offer
-support for more than one language). You can always add or remove languages from your list of
-available languages by selecting the option <guimenuitem>Add/Remove Languages</guimenuitem> available 
-in the <guimenu>Code</guimenu> menu.
-</para>
-<para>
-<screenshot>
-<screeninfo>Add / Remove Language</screeninfo>
-	<mediaobject>
-	  <imageobject>
-	    <imagedata fileref="pics/add-remove-languages.png" format="PNG"/>
-	  </imageobject>
-	  <textobject>
-	    <phrase>Add and Remove languages for Code Generation in &umbrello;</phrase>
-	  </textobject>
-	  <caption>
-	    <para>Add and Remove languages for Code Generation in &umbrello;
-	    </para>
-	  </caption>
-	</mediaobject>
-</screenshot>
-</para>
-</sect2> <!--add-languages-->
 <sect2 id="generate-code">
 <title>Generating Code</title>
 <para>
@@ -127,6 +94,7 @@ heading at the beginning of each generated file. Heading files can contain copyr
 </sect4>
 <sect4>
 <title>Overwrite Policy</title>
+<!-- FIXME update for Umbrello 1.2's new C++ and Java code generators -->
 <para>
 This option tells Umbrello what to do if the file it wants to create already exists in
 the destination directory. Umbrello 1.1 <emphasis>cannot modify existing source files</emphasis>,
@@ -170,7 +138,7 @@ This will generate code for all the classes in your Model using the current sett
 <title>Code Import</title>
 <para>
 Umbrello can import source code from your existing projects to help you build Model of 
-your systems. Version 1.1 of the application supports only C++ source code, but other languages
+your systems. &umbrello; 1.2 supports only C++ source code, but other languages
 should be available in future versions.
 </para>
 <para>
