--- a/doc/working_with_umbrello.docbook
+++ b/doc/working_with_umbrello.docbook
@@ -7,13 +7,12 @@
 
 <para>
 This chapter will introduce you to &umbrello;'s user interface and will
-tell you all you need to know to start modeling.  All actions in &umbrello; are accessible via the menu and
-the toolbars, but &umbrello; also makes extensive use of <mousebutton>right</mousebutton> mouse
-button context menus. You can &RMB; click on almost any element in
+tell you all you need to know to start modelling.  All actions in &umbrello; are accessible via the menu and
+the toolbars, but &umbrello; also makes extensive use of &RMB; context menus. You can &RMB; click on almost any element in
 &umbrello;'s work area or tree view to get a menu with the most useful
 functions that can be applied to the particular element you are
-working on. Some users find this a little confusing at the beginning, because they are more used to working with the menu or tool bars, but
-once you get used to <mousebutton>right</mousebutton> clicking, it will greatly speed up your work.
+working on. Some users find this a little confusing at the beginning because they are more used to working with the menu or tool bars, but
+once you get used to <mousebutton>right</mousebutton> clicking it will greatly speed up your work.
 </para>
 
 <sect1 id="user-interface">
@@ -67,10 +66,10 @@ in the tree view) and you can organize your elements by moving them to the appro
 <title>Documentation Window</title>
 <para>
 The Documentation Window is the small window located on the left bottom of &umbrello;, and it gives
-you a quick preview of the documentation for the currently selected Object. The Documentation Window is
+you a quick preview of the documentation for the currently selected item. The Documentation Window is
 rather small because it is intended to allow you just a quick pick into the element's documentation while
 taking as little screen space as possible. If you need to view the documentation in more detail you can always
-open the element properties.
+open the item's properties.
 </para>
 </sect2>
 <sect2 id="work-area">
@@ -137,10 +136,10 @@ Using the context menu of the different items in the Tree View you are able to a
 and modify almost all the elements in your model. <mousebutton>Right</mousebutton> clicking on the folders in the Tree View
 will give you options for creating the different types of diagrams as well as, depending on whether
 the folder is a <emphasis>Use Case View</emphasis> or a <emphasis>Logical View</emphasis>, Actors,
-Use Cases and Classes.
+Use Cases, Classes, etc.
 </para>
 <para>
-Once you have added elements to your model you can also edit this elements by accessing its properties
+Once you have added elements to your model you can also edit an element by accessing its properties
 dialog, which you find by selecting the option <emphasis>Properties</emphasis> from the context menu
 shown when <mousebutton>right</mousebutton> clicking on the items in the Tree View.
 </para>
@@ -153,7 +152,7 @@ to do this are given in the following sections.
 <title>Adding and Removing Diagrams</title>
 <para>
 Your &UML; model consists of a set of &UML; elements and associations between them. However you cannot see the model
-directly, you use a <emphasis>Diagrams</emphasis> to look at it.
+directly, you use <emphasis>Diagrams</emphasis> to look at it.
 </para>
 <sect2 id="create-diagram">
 <title>Creating Diagrams</title>
@@ -184,14 +183,10 @@ deleted and the file has been saved there is no way to undo this action.
 <title>Renaming Diagrams</title>
 <para>
 If you want to change the name of an existing diagram you can easily do this by selecting the Rename option
-from its context menu in the Tree View.
+from its &RMB; menu in the Tree View.
 </para>
 <para>Another way to rename a diagram is to do this via its properties dialog, which you obtain by
 selecting Properties from its Context Menu or by double clicking on it in the Tree View.
-<!-- FIXME, not sure on this one
-Yet another way to rename a diagram is to single click on an already selected Diagram and change
-the name directly in the Tree View.    
--->
 </para>
 </sect2>
 </sect1>
@@ -201,7 +196,7 @@ the name directly in the Tree View.
 When working on a diagram, &umbrello; will try to guide you by applying some simple rules as to which
 elements are valid in the different types of diagrams, as well as the relationships that can exist
 between them. If you are an &UML; expert you will probably not even notice it, but this will help
-UML novices create standard-conformant diagrams.
+&UML; novices create standard-conformant diagrams.
 </para>
 <para>
 Once you have created your diagrams it is time to start editing them. Here you should notice 
@@ -231,12 +226,11 @@ The second way of adding elements to your diagram is by using the Work Toolbar's
 that this will also add the elements to your model).
 </para>
 <para>
-The Work Toolbar is by default located on the far right of the application window, but you
-can dock it into other edge or have it floating around if you prefer. The tools available
+The Work Toolbar was by default located on the far right of the application window, Umbrello 1.2 has moved this to the top of the window.
+You can dock it into other edge or have it floating around if you prefer. The tools available
 on this toolbar (the buttons you see on it) change depending on the type of diagram
 you are currently working on. The button for the currently
-selected tool is activated in the toolbar, and you can always switch to the previously used tool
-by pressing the &Shift; key. You can also switch to the select tool
+selected tool is activated in the toolbar. You can switch to the select tool
 by pressing the &Esc; key.
 </para>
 <para>
@@ -254,11 +248,9 @@ the right tool for that. You should drag and drop the class from the Tree View i
 <title>Deleting Elements</title>
 <para>
 You can delete any element by selecting the option <guimenuitem>Delete</guimenuitem> from its context menu.
-In other words, you just need to right click on the element you want to delete and select the corresponding
-option from the popup menu
 </para>
 <para>
-Again, here is a <emphasis>big</emphasis> difference between removing an object from a diagram, and
+Again, there is a <emphasis>big</emphasis> difference between removing an object from a diagram, and
 deleting an object from your model:
 If you delete an object from within a diagram, you are only removing the object from that particular
 diagram: the element will still be part of your model and if there are other diagrams using the same
@@ -317,10 +309,8 @@ This page is always available.
 <sect3 id="class-attributes-settings">
 <title>Class Attribute Settings</title>
 <para>
-In the Attributes Settings page you can add, edit, or delete attributes of this class.
-For adding a new attribute you only need to press the <guibutton>New Attribute</guibutton> button
-and for editing or deleting one you need to select an attribute from the list and then press the
-appropriate button. You can also move attributes up and down the list by pressing the arrow button
+In the Attributes Settings page you can add, edit, or delete attributes (variables) of the class.
+You can move attributes up and down the list by pressing the arrow button
 on the side.
 This page is always available.
 </para>
@@ -334,6 +324,12 @@ the <emphasis>Operation Properties</emphasis> dialog. If you want to add paramet
 you need to click the <guibutton>New Parameter</guibutton> button, which will show the
 <emphasis>Parameter Properties</emphasis> dialog.
 This page is always available
+</para>
+</sect3>
+<sect3 id="class-template-settings">
+<title>Class Template Settings</title>
+<para>
+This page allows you to add class templates which are unspecified classes or datatypes.  In Java 1.5 these will be called Generics.
 </para>
 </sect3>
 <sect3 id="class-associations-page">
@@ -376,6 +372,7 @@ and is missing if you open the class' properties dialog from the Tree View.
 </para>
 </sect3>
 </sect2>
+
 <sect2 id="associations">
 <title>Associations</title>
 <para>
@@ -420,10 +417,11 @@ try to <mousebutton>double</mousebutton> click on it as with other &UML; objects
 </para>
 </sect3>
 </sect2>
+
 <sect2 id="notes">
-<title>Notes and Text</title>
+<title>Notes, Text and Boxes</title>
 <para>
-Text Notes and Lines Of Text are elements that can be present in any type of diagram and have no real
+Notes, Lines Of Text and Boxes are elements that can be present in any type of diagram and have no real
 semantic value, but are very helpful to add extra comments or explanations that can make your
 diagram easier to understand.
 </para>
